Yaptığınız değişikliğin açıklaması

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2445,15 +2445,15 @@ img.testimonial-thumb {
 
 /* icons colors */
 .mail-icon {
-  color: #f21d1d; 
+  color: whitesmoke;
 }
 
 .whatsapp-icon {
-  color: #25D366; 
+  color: whitesmoke;
 }
 
 .messenger-icon {
-  color: #0078FF;
+  color:whitesmoke;
 }
 
 /* Links */
